# ws25-np

./: .gitignore
Praktikum1/: CMakeLists.txt
Praktikum1/udp_examples/: .gitignore  Makefile.am  Socket.c  Socket.h  echo_client.c  echo_client_connected.c  echo_server.c
Praktikum1/udplite_examples/: Socket.c  Socket.h  configure.ac  echo_client.c  echo_client_connected.c  echo_server.c
Praktikum2/tcp_examples/: .gitignore  Makefile.am  Socket.c  Socket.h  configure.ac  echo_client.c  tcp_client.c  tcp_daytime_server  tcp_daytime_server.c  tcp_discard_server.c  tcp_echo_server_thread.c
Praktikum3/tcp_examples/: .gitignore  Makefile.am  Socket.c  Socket.h  configure.ac  getaddresses.c  tcp_client_with_dns  tcp_client_with_dns.c  tcp_daytime_server.c  tcp_discard_server.c  tcp_echo_server_thread.c  tcp_echo_server_thread_chargen.c
client/: .gitignore  Makefile.am  configure.ac  server
client/lib/: 4clib.h  cblib.c
client/src/: 4clib.c  client.c  peer_protocol.c  peer_protocol.h  protocol.c  protocol.h  server.c  socket_util.c  socket_util.h
