bin_PROGRAMS        = tcp_client tcp_daytime_server tcp_discard_server tcp_echo_server_thread
tcp_client_SOURCES = tcp_client.c Socket.c
tcp_daytime_server_SOURCES = tcp_daytime_server.c Socket.c
tcp_discard_server_SOURCES = tcp_discard_server.c Socket.c
tcp_echo_server_thread_SOURCES = tcp_echo_server_thread.c Socket.c
tcp_echo_server_thread_LDADD = -lpthread
tcp_echo_server_thread_LDFLAGS = -pthread